forgot to update <> to html code

--- a/RDF_turtle/turtle.html
+++ b/RDF_turtle/turtle.html
@@ -35,35 +35,35 @@
 
 
 		my:isChildOf	a					rdf:predicate ;
-						rdfs:isDefinedBy	<https://sastaffo.github.io/RDF_turtle/turtle.html#> ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
 						rdfs:label			"isChildOf" ;
 						rdfs:comment		"Subject is a child of the Object." ;
 						rdfs:domain			my:Person ;
 						rdfs:range			my:Person .
 
 		my:isSiblingOf	a					rdf:predicate ;
-						rdfs:isDefinedBy	<https://sastaffo.github.io/RDF_turtle/turtle.html#> ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
 						rdfs:label			"isSiblingOf" ;
 						rdfs:comment		"Subject is a sibling of the Object." ;
 						rdfs:domain			my:Person ;
 						rdfs:range			my:Person .
 
 		my:firstName	a					rdf:predicate ;
-						rdfs:isDefinedBy	<https://sastaffo.github.io/RDF_turtle/turtle.html#> ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
 						rdfs:label			"firstName" ;
 						rdfs:comment		"Subject has first name Object, as String." ;
 						rdfs:domain			my:Person , my:Pet;
 						rdfs:range			rdfs:Literal .
 
 		my:lastName		a					rdf:predicate ;
-						rdfs:isDefinedBy	<https://sastaffo.github.io/RDF_turtle/turtle.html#> ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
 						rdfs:label			"lastName" ;
 						rdfs:comment		"Subject has last name Object, as String." ;
 						rdfs:domain			my:Person , my:Pet;
 						rdfs:range			rdfs:Literal .
 
 		my:dateOfBirth	a					rdf:predicate ;
-						rdfs:isDefinedBy	<https://sastaffo.github.io/RDF_turtle/turtle.html#> ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
 						rdfs:label			"dateOfBirth" ;
 						rdfs:comment		"Subject was born Object, as Date." ;
 						rdfs:domain			my:Person, my:Pet ;
